k8s-manifests/deployment.yaml
# k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-showcase-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-showcase-app
  template:
    metadata:
      labels:
        app: kubernetes-showcase-app
    spec:
      containers:
      - name: kubernetes-showcase-app
        image: kubernetes-showcase-app:1.0
        ports:
        - containerPort: 3000
