k8s-manifests/service.yaml
# k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-showcase-service
spec:
  selector:
    app: kubernetes-showcase-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
